force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>Claims filed for review from the VA</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>Claim-{00000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>