force-app/main/default/objects/Claim__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Annual income of Veteran</description>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>