force-app/main/default/objects/Claim__c/fields/Appeal_Available__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control whether a claim is eligible for an appeal or not</description>
    <inlineHelpText>Check the box to mark a claim as eligible for an appeal</inlineHelpText>
    <label>Appeal Available</label>
    <type>Checkbox</type>
</CustomField>