force-app/main/default/objects/Claim__c/fields/Credit_Score_Provided__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to indicate whether a credit score has been provided by the veteran</description>
    <label>Credit Score Provided</label>
    <type>Checkbox</type>
</CustomField>