force-app/main/default/objects/Claim__c/fields/Current_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Health_Status__c</fullName>
    <description>A description of the veterans current health status</description>
    <label>Current Health Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>