force-app/main/default/objects/Claim__c/fields/Current_Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Housing_Status__c</fullName>
    <description>The current housing status of the veteran</description>
    <label>Current Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own a Home</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Living with Family</fullName>
            </value>
            <value>
                <fullName>Government Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>