force-app/main/default/objects/Claim__c/fields/Date_of_Disability_Onset__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Disability_Onset__c</fullName>
    <description>The date on which their medical condition or injury became severe enough to prevent them from working for a significant period of time</description>
    <label>Date of Disability Onset</label>
    <type>Date</type>
</CustomField>