force-app/main/default/objects/Claim__c/fields/Date_of_Injury_or_Illness__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Injury_or_Illness__c</fullName>
    <description>The date where an injury occurred or illness first presented symptoms</description>
    <label>Date of Injury or Illness</label>
    <type>Date</type>
</CustomField>