force-app/main/default/objects/Claim__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date a decision was reached for a claim</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>