force-app/main/default/objects/Claim__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <description>Description of reason the decision was made for this claim</description>
    <label>Decision Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>