force-app/main/default/objects/Claim__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <description>Picklist for short description of why a claim was denied</description>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
            <value>
                <fullName>Not Service-Connected</fullName>
            </value>
            <value>
                <fullName>Missed Deadlines</fullName>
            </value>
            <value>
                <fullName>Paperwork Errors</fullName>
            </value>
            <value>
                <fullName>Medical Condition Doesn’t Meet VA Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>