force-app/main/default/objects/Claim__c/fields/Disability_Status__c.field-meta.xml
<CustomField>
    <fullName>Disability_Status__c</fullName>
    <label>Disability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending VA Determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>