force-app/main/default/objects/Claim__c/fields/File_Count__c.field-meta.xml
<CustomField>
    <fullName>File_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of files attached in the related claim document</description>
    <label>File Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>