force-app/main/default/objects/Claim__c/fields/Files_Attached__c.field-meta.xml
<CustomField>
    <fullName>Files_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox based on whether or not veterans have uploaded files to the related claim document record</description>
    <label>Files Attached</label>
    <type>Checkbox</type>
</CustomField>