force-app/main/default/objects/Claim__c/fields/Health_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Status__c</fullName>
    <description>Current status of the veterans health insurance</description>
    <label>Health Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insured</fullName>
            </value>
            <value>
                <fullName>Uninsured</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>