force-app/main/default/objects/Claim__c/fields/Institution_for_Education_or_Training__c.field-meta.xml
<CustomField>
    <fullName>Institution_for_Education_or_Training__c</fullName>
    <description>The institution offering the education or training that the veteran is seeking</description>
    <label>Institution for Education or Training</label>
    <length>30</length>
    <type>Text</type>
</CustomField>