force-app/main/default/objects/Claim__c/fields/Medical_Records_Attached__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates whether a claim has supporting medical documents attached</description>
    <label>Medical Records Attached</label>
    <type>Checkbox</type>
</CustomField>