force-app/main/default/objects/Claim__c/fields/Permanent_Disability__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to keep track if the veteran has a permanent disability</description>
    <label>Permanent Disability</label>
    <type>Checkbox</type>
</CustomField>