force-app/main/default/objects/Claim__c/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <description>The end date of the training or education</description>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>