force-app/main/default/objects/Claim__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <description>Date the training or education starts</description>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>