force-app/main/default/objects/Claim__c/fields/Proof_of_Disability__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Disability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document providing proof of disability</description>
    <label>Proof of Disability</label>
    <referenceTo>Claim_Document__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>