force-app/main/default/objects/Claim__c/fields/Service_Connected_Injury_or_Illness__c.field-meta.xml
<CustomField>
    <fullName>Service_Connected_Injury_or_Illness__c</fullName>
    <description>Description of service related injury or illness</description>
    <inlineHelpText>Please provide a description of the service related injury or illness</inlineHelpText>
    <label>Service Connected Injury or Illness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>