force-app/main/default/objects/Claim__c/fields/Status_for_Path__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Path__c</fullName>
    <formula>IF( 
   ISPICKVAL(Current_Status__c , &quot;Approved&quot;), 
   &quot;Closed&quot;, 
   IF( 
       ISPICKVAL(Current_Status__c , &quot;Denied&quot;), 
       &quot;Closed&quot;, 
       TEXT(Current_Status__c )
   )
)</formula>
    <label>Status for Path</label>
    <type>Text</type>
</CustomField>