force-app/main/default/objects/Claim__c/fields/Type_of_Education_or_Training__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Education_or_Training__c</fullName>
    <description>A description of what type of education or training the veteran is seeking</description>
    <label>Type of Education or Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Vocational Training</fullName>
            </value>
            <value>
                <fullName>Certification Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>