force-app/main/default/objects/Claim__c/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Veteran that this claim is related to</description>
    <label>Veteran</label>
    <referenceTo>Veteran__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>