force-app/main/default/objects/Claim__c/fields/Veteran_Age__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Veteran__r.Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>