force-app/main/default/objects/Claim__c/fields/Veteran_Disability_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Disability_Percentage__c</fullName>
    <formula>Veteran__r.Disability_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran Disability Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>