force-app/main/default/objects/Claim__c/fields/Veteran_Email__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Email__c</fullName>
    <formula>Veteran__r.Email__c</formula>
    <label>Veteran Email</label>
    <type>Text</type>
</CustomField>