force-app/main/default/objects/Claim__c/fields/Veteran_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Veteran_First_Name__c</fullName>
    <formula>Veteran__r.First_Name__c</formula>
    <label>Veteran First Name</label>
    <type>Text</type>
</CustomField>