force-app/main/default/objects/Claim__c/fields/Veteran_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Last_Name__c</fullName>
    <formula>Veteran__r.Last_Name__c</formula>
    <label>Veteran Last Name</label>
    <type>Text</type>
</CustomField>