force-app/main/default/objects/Claim__c/recordTypes/Disability_Compensation.recordType-meta.xml
<RecordType>
    <fullName>Disability_Compensation</fullName>
    <active>true</active>
    <description>Claim requesting Disability Compensation</description>
    <label>Disability Compensation</label>
</RecordType>