force-app/main/default/objects/Claim__c/recordTypes/Education_and_Training.recordType-meta.xml
<RecordType>
    <fullName>Education_and_Training</fullName>
    <active>true</active>
    <description>Claim requesting education and training</description>
    <label>Education and Training</label>
</RecordType>