force-app/main/default/objects/Claim__c/recordTypes/Healthcare_Benefits.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Benefits</fullName>
    <active>true</active>
    <description>Claim requesting healthcare benefits</description>
    <label>Healthcare Benefits</label>
</RecordType>