force-app/main/default/objects/Claim__c/recordTypes/Housing_Assistance.recordType-meta.xml
<RecordType>
    <fullName>Housing_Assistance</fullName>
    <active>true</active>
    <description>Claim requesting housing assistance</description>
    <label>Housing Assistance</label>
</RecordType>