force-app/main/default/objects/Claim__c/recordTypes/Pension.recordType-meta.xml
<RecordType>
    <fullName>Pension</fullName>
    <active>true</active>
    <description>Claim requesting pension</description>
    <label>Pension</label>
</RecordType>