force-app/main/default/objects/Claim__c/validationRules/Prevent_Edit_If_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_If_Approved</fullName>
    <active>false</active>
    <description>Prevents the modifying on the claim record if current status is approved</description>
    <errorConditionFormula>AND(
    TEXT(PRIORVALUE(Current_Status__c)) = &quot;Approved&quot;,  
    NOT(ISCHANGED(Current_Status__c))
)</errorConditionFormula>
    <errorMessage>Cannot edit an already Approved Claims record</errorMessage>
</ValidationRule>