force-app/main/default/objects/Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Worker__c</columns>
    <columns>Claim_Type__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Veteran__c</columns>
    <columns>Veteran_Age__c</columns>
    <columns>Annual_Income__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Appeal_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>