force-app/main/default/objects/Claim__c/listViews/Claim_Type_Disability_Compensation.listView-meta.xml
<ListView>
    <fullName>Claim_Type_Disability_Compensation</fullName>
    <columns>NAME</columns>
    <columns>Case_Worker__c</columns>
    <columns>Veteran__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Benefit_Level__c</columns>
    <columns>Disability_Status__c</columns>
    <columns>Service_Connected_Injury_or_Illness__c</columns>
    <columns>Date_of_Disability_Onset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Type__c</field>
        <operation>equals</operation>
        <value>Disability Compensation</value>
    </filters>
    <label>Claim Type: Disability Compensation</label>
    <sharedTo>
        <group>VeteranCare_Employees</group>
    </sharedTo>
</ListView>