force-app/main/default/objects/Claim__c/listViews/Claim_Type_Education_and_Training.listView-meta.xml
<ListView>
    <fullName>Claim_Type_Education_and_Training</fullName>
    <columns>NAME</columns>
    <columns>Case_Worker__c</columns>
    <columns>Veteran__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Benefit_Level__c</columns>
    <columns>Type_of_Education_or_Training__c</columns>
    <columns>Institution_for_Education_or_Training__c</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>Program_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Type__c</field>
        <operation>equals</operation>
        <value>Education and Training</value>
    </filters>
    <label>Claim Type: Education and Training</label>
    <sharedTo>
        <group>VeteranCare_Employees</group>
    </sharedTo>
</ListView>