force-app/main/default/objects/Claim__c/listViews/Claim_Type_Healthcare_Benefits.listView-meta.xml
<ListView>
    <fullName>Claim_Type_Healthcare_Benefits</fullName>
    <columns>NAME</columns>
    <columns>Case_Worker__c</columns>
    <columns>Veteran__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Benefit_Level__c</columns>
    <columns>Current_Health_Status__c</columns>
    <columns>Health_Insurance_Status__c</columns>
    <columns>Disability_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Type__c</field>
        <operation>equals</operation>
        <value>Healthcare Benefits</value>
    </filters>
    <label>Claim Type: Healthcare Benefits</label>
    <sharedTo>
        <group>VeteranCare_Employees</group>
    </sharedTo>
</ListView>