force-app/main/default/objects/Claim__c/listViews/Claim_Type_Pension.listView-meta.xml
<ListView>
    <fullName>Claim_Type_Pension</fullName>
    <columns>NAME</columns>
    <columns>Case_Worker__c</columns>
    <columns>Veteran__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Benefit_Level__c</columns>
    <columns>Claim_Type__c</columns>
    <columns>Proof_of_Disability__c</columns>
    <columns>Annual_Income__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Type__c</field>
        <operation>equals</operation>
        <value>Pension</value>
    </filters>
    <label>Claim Type: Pension</label>
    <sharedTo>
        <group>VeteranCare_Employees</group>
    </sharedTo>
</ListView>