force-app/main/default/objects/Claim__c/listViews/Claims_Missing_Medical_Records.listView-meta.xml
<ListView>
    <fullName>Claims_Missing_Medical_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medical_Records_Attached__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Claims Missing Medical Records</label>
</ListView>