force-app/main/default/objects/Claim__c/listViews/My_Assigned_Claims.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Claims</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Assigned Claims</label>
</ListView>